more position fixed experiments on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -80,5 +80,5 @@ a:visited {
 
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
